[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", optional = true }
anyhow = { version = "1.0", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
pretty_assertions = "0.6"
parse-display = "0.6"

[dev-dependencies]

[lib]

